--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <title>Meal Prepper</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
         <link rel="stylesheet" href="./assets/css/styles.css">
+
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+        <script async src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initMap"></script>
+        <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
+        <script type="module" src="./index.js"></script>
     </head>
     <body>
         <header class="hero is-small is-info">
@@ -21,6 +26,10 @@
             </div>
             <button class="button" id="search-button">Search</button>
         </form>
+
+        <div id="map"></div>
+        
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly" defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="./assets/js/config.js"></script>
         <script src="./assets/js/script.js"></script>
