--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <button class="button" id="search-button">Search</button>
         </form>
 
-        <div id="map"></div>
+        <main id="content"></main>
+        <!-- <div id="map"></div> -->
         
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly" defer></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
