switched film apis

--- a/testindex.html
+++ b/testindex.html
@@ -34,24 +34,16 @@
                 </div>
                 <div class="dropdown-menu" id="dropdown-menu3" role="menu">
                     <div class="dropdown-content">
-                        <a href="#" class="dropdown-item">Action</a>
-                        <a href="#" class="dropdown-item">Adventure</a>
-                        <a href="#" class="dropdown-item">Animation</a>
-                        <a href="#" class="dropdown-item">Comedy</a>
-                        <a href="#" class="dropdown-item">Crime</a>
-                        <a href="#" class="dropdown-item">Documentary</a>
-                        <a href="#" class="dropdown-item">Drama</a>
-                        <a href="#" class="dropdown-item">Family</a>
-                        <a href="#" class="dropdown-item">Fantasy</a>
-                        <a href="#" class="dropdown-item">History</a>
-                        <a href="#" class="dropdown-item">Horror</a>
-                        <a href="#" class="dropdown-item">Music</a>
-                        <a href="#" class="dropdown-item">Mystery</a>
-                        <a href="#" class="dropdown-item">Romance</a>
-                        <a href="#" class="dropdown-item">Science Fiction</a>
-                        <a href="#" class="dropdown-item">Thriller</a>
-                        <a href="#" class="dropdown-item">War</a>
-                        <a href="#" class="dropdown-item">Western</a>
+                        <a href="#" class="dropdown-item">action-adventure</a>
+                        <a href="#" class="dropdown-item">animation</a>
+                        <a href="#" class="dropdown-item">classic</a>
+                        <a href="#" class="dropdown-item">comedy</a>
+                        <a href="#" class="dropdown-item">crama</a>
+                        <a href="#" class="dropdown-item">horror</a>
+                        <a href="#" class="dropdown-item">family</a>
+                        <a href="#" class="dropdown-item">mystery</a>
+                        <a href="#" class="dropdown-item">scifi-fantasy</a>
+                        <a href="#" class="dropdown-item">western</a>
                     </div>
                 </div>
             </div>
@@ -61,6 +53,6 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="./assets/js/config.js"></script>
-        <script src="./assets/js/script.js"></script>
+        <script src="./assets/js/test.js"></script>
     </body>
 </html>
