added card layout

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     </div>
                 </div>
             </div>
-
-            <div id="film-options"></div>
+        <main id="content">
+        </main>
         </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
