added some card styles, colors, etc

--- a/index.html
+++ b/index.html
@@ -18,23 +18,26 @@
         <div id="homepage" class="homepage">
             <div id="homepage-content" class="homepage-content">
             <h1 class="homepage-header">Homebuddy</h1>
-            <h2>You guessed it, you're staying in tonight!</h2>
             <button id="homepage-button" class="homepage-button">Create your Evening</button>
         </div>
         </div>
         <!-- end of homepage -->
 
+        <!-- recipes page -->
         <form class="field hide">
             <div class="control">
-                <label class="label">Search for Recipes!</label>
+                <label class="label">What would you like to have for dinner?</label>
                 <input class="input is-large" id="search-term" type="text" placeholder="i.e. Chicken Salad">
             </div>
             <button class="button" id="search-button">Search</button>
         </form>
 
         <main id="content"></main>
-        
-        <div class="section">
+
+        <!-- end of recipes page -->
+
+        <!-- start movies page -->
+        <div class="section hide">
             <div class="dropdown">
                 <div class="dropdown-trigger">
                     <button class="button" aria-haspopup="true" aria-controls="dropdown-menu3" id="genres">
@@ -68,6 +71,7 @@
                 </div>
             </div>
         </div>
+        <!-- end movies page -->
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="./assets/js/config.js"></script>
