commit before push

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="hero-body">
                 <h1 class="title">Homebuddy</h1>
                 <p class="subtitle">Sometimes it's better to stay home.</p>
-                <li class="saved-recipes" id="saved-recipes"><a href="LINK TO SAVED RECIPES PAGE"></a>Saved Recipces</li>
+                <li class="saved-recipes" id="saved-recipes"><a href="LINK TO SAVED RECIPES PAGE"></a>Saved Recipes</li>
             </div>
         </header>
         <!-- div of entire landing page -->
