--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Meal Prepper</title>
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+        <title>Homebuddy</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
         <link rel="stylesheet" href="./assets/css/styles.css">
     </head>
+
     <body>
         <header class="hero is-small is-info hide">
             <div class="hero-body">
