made genre buttons red and made food disappear when select modal button clicked

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
         <div id="homepage" class="homepage">
             <div id="homepage-content" class="homepage-content">
             <h1 class="homepage-header">Homebuddy</h1>
+            <h2>Who needs to go out to have fun? Customize the perfect evening in.</h2>
             <button id="homepage-button" class="homepage-button">Create your Evening</button>
         </div>
         </div>
         <!-- end of homepage -->
 
         <!-- recipes page -->
-        <form class="field hide">
+        <form class="field food-field hide">
             <div class="control">
                 <label class="label">What would you like to have for dinner?</label>
                 <input class="input is-large" id="search-term" type="text" placeholder="i.e. Chicken Salad">
@@ -41,6 +42,12 @@
 
         <main id="content"></main>
 
+        <!-- final page -->
+        <div class="final-page" id="final-page">
+            <h1 class="title-2"></h1>
+                <h2></h2>
+        </div>
+        <!-- end final page -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="./assets/js/config.js"></script>
         <script src="./assets/js/script.js"></script>
