changed phrase on homepage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="homepage" class="homepage">
             <div id="homepage-content" class="homepage-content">
             <h1 class="homepage-header">Homebuddy</h1>
-            <h2>Who needs to go out to have fun? Customize the perfect evening in.</h2>
+            <h2>Don't go out to have fun... Customize the perfect evening in.</h2>
             <button id="homepage-button" class="homepage-button">Create your Evening</button>
         </div>
         </div>
