--- a/index.html
+++ b/index.html
@@ -29,13 +29,11 @@
         <!-- recipes page -->
         <form class="field hide">
             <div class="control">
-                <label class="label">What would you like to have for dinner?</label>
+                <label class="label" id="search-label">What would you like to have for dinner?</label>
                 <input class="input is-large" id="search-term" type="text" placeholder="i.e. Chicken Salad">
             </div>
             <button class="button" id="search-button">Search</button>
         </form>
-
-        <button type="button" id="placeholder">Click</button>
 
         <div id="film-search"></div>
 
