--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
             <button class="button" id="search-button">Search</button>
         </form>
 
-        <button type="button" id="placeholder">Click</button>
-
+        <!-- Area film search bar and genre buttons populate -->
         <div id="film-search"></div>
 
         <main id="content"></main>
