added placeholder button

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <div class="final-page" id="final-page">
             <h1 class="title-2"></h1>
                 <h2></h2>
+                <button id="placeholder">placeholder</button>
         </div>
         <!-- end final page -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
