placeholder button clears entire page and gives blank slate

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="./assets/css/styles.css">
     </head>
 
-    <body>
+    <body id="document">
         <header class="hero is-small is-info hide">
             <div class="hero-body">
                 <h1 class="title">Homebuddy</h1>
