got all movie content to hide in a better way

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <main id="content"></main>
 
         <!-- final page -->
-        <div class="final-page" id="final-page">
+        <div id="final-page">
             <h1 class="title-2"></h1>
                 <h2></h2>
                 <button id="placeholder">placeholder</button>
