--- a/index.html
+++ b/index.html
@@ -1,59 +1,64 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-        <title>Homebuddy</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-        <link rel="stylesheet" href="./assets/css/styles.css">
-    </head>
 
-    <body id="document">
-        <header class="hero is-small is-info hide">
-            <div class="hero-body">
-                <h1 class="title">Homebuddy</h1>
-                <p class="subtitle">Sometimes it's better to stay home.</p>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <title>Homebuddy</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+</head>
+
+<body id="document">
+    <header class="hero is-small is-info hide">
+        <div class="hero-body">
+            <h1 class="title">Homebuddy</h1>
+            <p class="subtitle">Sometimes it's better to stay home.</p>
+            <ul class="links" id="links"> 
                 <li class="saved-recipes" id="saved-recipes">Saved Recipes</li>
-            </div>
-        </header>
-        <!-- div of entire landing page -->
-        <div id="homepage" class="homepage">
-            <div id="homepage-content" class="homepage-content">
+                <li class="back-to-homepage-btn" id="back-to-homepage-btn">Back to Homepage</li>
+            </ul>
+        </div>
+    </header>
+    <!-- div of entire landing page -->
+    <div id="homepage" class="homepage">
+        <div id="homepage-content" class="homepage-content">
             <h1 class="homepage-header">Homebuddy</h1>
             <h2>Don't go out to have fun... Customize the perfect evening in.</h2>
             <button id="homepage-button" class="homepage-button">Create your Evening</button>
         </div>
+    </div>
+    <!-- end of homepage -->
+
+    <!-- recipes page -->
+    <form class="field food-field hide">
+        <div class="control">
+            <label class="label" id="search-label">What would you like to have for dinner?</label>
+            <input class="input is-large" id="search-term" type="text" placeholder="i.e. Chicken Salad">
         </div>
-        <!-- end of homepage -->
-
-        <!-- recipes page -->
-        <form class="field food-field hide">
-            <div class="control">
-                <label class="label" id="search-label">What would you like to have for dinner?</label>
-                <input class="input is-large" id="search-term" type="text" placeholder="i.e. Chicken Salad">
-            </div>
-            <button class="button" id="search-button">Search</button>
-        </form>
+        <button class="button" id="search-button">Search</button>
+    </form>
 
 
 
-        <!-- Area film search bar and genre buttons populate -->
+    <!-- Area film search bar and genre buttons populate -->
 
-        <div id="film-search"></div>
+    <div id="film-search"></div>
 
-        <main id="content"></main>
+    <main id="content"></main>
 
-        <!-- final page -->
-        <div id="final-page">
-            <h1 class="title-2"></h1>
-                <h2></h2>
-                <button id="placeholder">placeholder</button>
-        </div>
-        <!-- end final page -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="./assets/js/config.js"></script>
-        <script src="./assets/js/script.js"></script>
-    </body>
+    <!-- final page -->
+    <div id="final-page">
+        <h1 class="title-2"></h1>
+        <h2></h2>
+        <button id="placeholder">placeholder</button>
+    </div>
+    <!-- end final page -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./assets/js/config.js"></script>
+    <script src="./assets/js/script.js"></script>
+</body>
+
 </html>
