--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <!-- final page -->
     <div class="final-page hide" id="final-page">
-        <h1 class="final-page-title title">You have a delicious and fun evening ahead!</h1>
+        <h1 class="final-page-title title">You have a memorable evening ahead!</h1>
         <h2 class="final-page-subheader">These are your selections:</h2>
     </div>
 
