--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
     <!-- Area film search bar and genre buttons populate -->
-
+    <button id="film-placeholder">Film-Page</button>
     <div id="film-search"></div>
 
     <main id="content"></main>
