--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
 
 
     <!-- cocktail button -->
-    <div class="has-text-centered"><button class="button hide" id="cocktail-btn">cocktail btn placeholder</button></div>
+    <div class="has-text-centered">
+        <button class="button hide" id="cocktail-btn">Load Cocktail Options</button>
+    </div>
 
     <!-- Area film search bar and genre buttons populate -->
     <div id="film-search"></div>
